[gd_scene load_steps=3 format=3 uid="uid://v4owc81xsrcw"]

[ext_resource type="Script" path="res://nodes/game_node.gd" id="1_ycw6p"]
[ext_resource type="Theme" uid="uid://rlger1bhw25m" path="res://nodes/game_node_theme.tres" id="2_x8k24"]

[node name="GameNode" type="Node2D"]
script = ExtResource("1_ycw6p")

[node name="MainPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
self_modulate = Color(0.470588, 0.470588, 0.470588, 1)
custom_minimum_size = Vector2(24, 24)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -27.0
offset_right = 82.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_x8k24")

[node name="Margin" type="MarginContainer" parent="MainPanel"]
layout_mode = 2
mouse_filter = 2

[node name="V" type="VBoxContainer" parent="MainPanel/Margin"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 1

[node name="MainLabel" type="Label" parent="MainPanel/Margin/V"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "GameNode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CornerPanelAnchor" type="Control" parent="MainPanel"]
layout_mode = 2
mouse_filter = 2

[node name="CornerPanel" type="PanelContainer" parent="MainPanel/CornerPanelAnchor"]
unique_name_in_owner = true
visible = false
self_modulate = Color(0.470588, 0.470588, 0.470588, 1)
custom_minimum_size = Vector2(38, 38)
layout_mode = 1
anchors_preset = -1
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_x8k24")

[node name="Margin" type="MarginContainer" parent="MainPanel/CornerPanelAnchor/CornerPanel"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 3

[node name="V" type="VBoxContainer" parent="MainPanel/CornerPanelAnchor/CornerPanel/Margin"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="CornerLabel" type="Label" parent="MainPanel/CornerPanelAnchor/CornerPanel/Margin/V"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="MainPanel" to="." method="_on_panel_gui_input"]
[connection signal="gui_input" from="MainPanel/CornerPanelAnchor/CornerPanel" to="." method="_on_panel_gui_input"]
